# scc5830

./: .gitattributes  .gitignore  LICENSE  README.md
as1/: pyproject.toml
as1/as1/: image_generation.py
as1/examples/: ex1.in  ex2.in  ex3.in  ex4.in  ex5.in
as1/testcases/: 1.in  10.in  11.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in  9.in
as1/tests/: test_as1.py
as2/: as2.ipynb  as2.py  hist_norm.ipynb  pyproject.toml
as2/examples/Casos_Teste/: ex1.in  ex1.out  ex12.in  ex2.in  ex2.out  ex3.in  ex3.out  ex4.in  ex4.out  ex5.in  ex5.out
as3/: pyproject.toml
as3/as3/: as3.ipynb  as3.py
as3/tests/: test_as3.py
as3/tests/test_cases/: README.txt
as4/as4/: pyproject.toml
as4/as4/as4/: as4.ipynb  as4.py
as4/as4/tests/: test_as4.py
as4/as4/tests/testcases/: README.txt
as5/: README.txt  pyproject.toml
as5/as5/: as5.ipynb  as5.py
as5/tests/: test_as5.py  test_assignment.py  utils.py
as6/: pyproject.toml
as6/as6/: as6.ipynb  as6.py
as6/tests/: test_as6.py
