[tool.poetry]
name = "as2"
version = "0.1.0"
description = "Assignment 2"
authors = ["Henrique Bonini de Britto Menezes"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
imageio = "^2.17.0"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
